--- a/.github/workflows/auto_githubPage.yml
+++ b/.github/workflows/auto_githubPage.yml
@@ -6,27 +6,37 @@ on:
     - main
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
+    
     steps:
     - name: Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     - name: Setup Node.js
-      uses: actions/setup-node@v2
+      uses: actions/setup-node@v3
       with:
-        node-version: '16'
+        node-version: 18
 
     - name: Install dependencies
       run: npm install
 
     - name: Build
       run: npm run build
-
-    - name: Deploy
-      if: success()
-      uses: peaceiris/actions-gh-pages@v3
+      
+    - name: Upload GitHub Pages artifact
+      uses: actions/upload-pages-artifact@v1.0.8
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: dist/portfolio
-        enable_jekyll: true
+        path: dist/portfolio
+
+  deploy:
+      needs: build
+      runs-on: ubuntu-latest
+  
+      permissions:
+        id-token: write
+        pages: write
+      steps:
+        
+        - name: Deploy GitHub Pages site
+          uses: actions/deploy-pages@v2.0.1
