--- a/.github/workflows/auto_githubPage.yml
+++ b/.github/workflows/auto_githubPage.yml
@@ -22,7 +22,7 @@ jobs:
       run: npm install
 
     - name: Build
-      run: npm run build
+      run: npm run build:github
       
     - name: Upload GitHub Pages artifact
       uses: actions/upload-pages-artifact@v1.0.8
